--- a/src/Pages/Home/Services/Services.css
+++ b/src/Pages/Home/Services/Services.css
@@ -9,6 +9,10 @@
     grid-gap: 22px;
 }
 
+.services-container img {
+    width: 100%;
+}
+
 /* responsive code */
 @media only screen and (max-width: 575px){
     .services-container{
