--- a/src/Pages/MyServiceDetail/MyServiceDetail.css
+++ b/src/Pages/MyServiceDetail/MyServiceDetail.css
@@ -2,3 +2,36 @@
     background-color: tomato;
     border: none;
 }
+
+.confirm-photo{
+    height: 400px;
+    width: 600px;
+    border-radius: 20px;
+}
+
+.section-confirm{
+    height: 100%;
+    width: 600px;
+    border: 2px solid tomato;
+    border-radius: 20px;
+    padding: 5px;
+    background-color: aqua;
+
+}
+
+/* @media only screen and (max-width: 575px){
+    .confirm-division{
+        grid-template-columns: repeat(1, 1fr);
+        height: 100%;
+        width: 100%;
+    }
+}
+
+@media only screen and (min-width: 575px) and (max-width: 992px){
+    .confirm-division{
+        grid-template-columns: repeat(1, 1fr);
+        height: 100%;
+        width: 100%;
+    }
+} */
+
