--- a/src/Pages/SharedPages/Footer/Footer.css
+++ b/src/Pages/SharedPages/Footer/Footer.css
@@ -2,5 +2,9 @@
     color: tomato;
     background-color: black;
     height: 100px;
+    width: 100%;
     padding-top: 30px;
+    /* position: absolute;
+    bottom: 0; */
+  
 }
