--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -10,3 +10,9 @@
     padding: 10px;
     text-align: justify;
 }
+
+.about-me-division:hover{
+    color: white;
+    background: linear-gradient(#ff5252, #b33939);
+  transition:.6s;
+}
